CIV-8310 Removed code smells